# unsung-anthem

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  BUILD  CHANGELOG.md  CMakeLists-1.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  OldCMakeLists.txt  README.md  SUPPORT.md  appveyor.yml  circle.yml  compile  compile.bat  compose  compose-1  compose-1.bat  compose-14  compose-14.bat  compose.bat  configure  configure-1  configure-1.bat  configure-14  configure-14.bat  configure.bat  lgtm.yml  product.json  replace-string.sh  requirements.txt
include/: CMakeLists.txt
include/anthem/: CMakeLists.txt  __config.h  array.h  command_line_interface.h  execute.h  fmap.h  logger.h  logging.h  macro_config.h  monad.h  type_traits.h  types.h
include/anthem/functor/: CMakeLists.txt  functor.h
include/anthem/internal/: CMakeLists.txt  meta.h  placeholders.h
include/anthem/std/: CMakeLists.txt  array.h  optional.h  type_traits.h  utility.h
include/anthem/util/: CMakeLists.txt  monad.h
include/cat/: monad.hpp  optional.hpp
include/gsl/: CMakeLists.txt  assert  util  view
include/ode/: CMakeLists.txt  __config  application.h  application_type_traits.h  args_array.h  argv_array.h  argv_t.h  command_line_interface.h  config.h  engine_framework.h  event_t.h  execute.h  execution_info.h  graphics_scene.h  graphics_system.h  initialize.h  input_scene.h  input_system.h  logger.h  logging.h  main_loop.h  object.h  object_t.h  pixel_count.h  pixel_t.h  platform.h  platform_manager.h  quit.h  scene.h  scene_t.h  string_utility.h  system.h  system_t.h  system_type.h  systems.h  type_name.h  type_traits.h  types.h  universal_object.h  universal_scene.h  (+1 more)
include/ode/cli/: CMakeLists.txt  arguments.h  inclusive_option_group.h  mutually_exclusive_option_group.h  option.h  option_group.h  option_group_t.h  option_type.h  parse_arguments.h
include/ode/filesystem/: CMakeLists.txt  path.h
include/ode/framework/: CMakeLists.txt  environment_manager.h  framework_object.h  framework_scene.h  main_loop.h  platform_manager.h  scheduler.h  state.h  state_manager.h  systems.h  task.h
include/ode/gl/: CMakeLists.txt  data.h  gl_config.h
include/ode/lua/: CMakeLists.txt  config.h  lua_config.h  script.h  stack.h  state.h  state_t.h  virtual_machine.h
include/ode/scenes/: CMakeLists.txt  scene_configuration.h
include/ode/sdl/: CMakeLists.txt  initialize.h  initialize_sdl.h  opengl.h  sdl_version.h  sdl_window_t.h  version.h  window.h  window_ptr.h  window_t.h
include/ode/systems/: CMakeLists.txt  graphics_object.h  graphics_scene.h  graphics_system.h  input_scene.h  input_system.h  object.h  object_t.h  scene.h  scene_configuration.h  scene_configuration_t.h  scene_t.h  system.h  system_t.h  system_type.h
include/ode/thread/: CMakeLists.txt  notification_queue.h  thread_pool.h
script/: CMakeLists.txt
script/anthem/: CMakeLists.txt
script/anthem/world/: CMakeLists.txt
script/ode/: CMakeLists.txt
script/test/: CMakeLists.txt
script/test/anthem/: CMakeLists.txt
script/test/ode/: CMakeLists.txt  script.lua  stack.lua  stack_push.lua  state.lua  virtual_machine.lua  virtual_machine_benchmark.lua
src/: BUILD  CMakeLists.txt  args_array.h  arguments.cpp  arguments.h  default_arguments.h  execute.cpp  execute.h  framework.cpp  framework.h  game_loop.cpp  game_loop.h  game_state.cpp  game_state.h  glfw.cpp  glfw.h  input.cpp  input.h  logging_config.h  main.cpp  render.cpp  render.h  schedule.cpp  schedule.h  sdl.h  state_manager.h  task_manager.cpp  task_manager.h  window.cpp  window.h
src/anthem/: CMakeLists.txt  application.cpp  application.h  command_line_interface.cpp  command_line_interface.h  config.h  input_scene.h  input_system.cpp  input_system.h  logging_config.h  main.cpp  run.cpp  run.h
src/anthem/systems/: CMakeLists.txt
src/framework/: game_loop.cpp  game_loop.h  scheduler.cpp  scheduler.h
src/manager/: CMakeLists.txt  game_state.h  state.h  tasking.cpp  tasking.h
src/ode/: CMakeLists.txt  command_line_interface.cpp  config.h  execute.cpp  initialize.cpp  input_system.cpp  logger.cpp  logging.cpp  logging_config.h  main_loop.cpp  platform_manager.cpp  string_utility.cpp  system_t.cpp  system_type.cpp  systems.cpp  universal_scene.cpp
src/ode/cli/: CMakeLists.txt  arguments.cpp  inclusive_option_group.cpp  mutually_exclusive_option_group.cpp  option.cpp  option_group.cpp  option_group_t.cpp  option_type.cpp  parse_arguments.cpp
src/ode/framework/: CMakeLists.txt  environment_manager.cpp  framework_scene.cpp  main_loop.cpp  main_loop.h  platform_manager.cpp  scheduler.cpp  systems.cpp
src/ode/gl/: CMakeLists.txt  data.cpp
src/ode/lua/: CMakeLists.txt  script.cpp  stack.cpp  state.cpp  virtual_machine.cpp
src/ode/scenes/: CMakeLists.txt  scene_configuration.cpp
src/ode/sdl/: CMakeLists.txt  initialize_sdl.cpp  opengl.cpp  opengl.h  sdl_version.cpp  version.cpp  window.cpp  window.h
src/ode/systems/: CMakeLists.txt  graphics_system.cpp  input_system.cpp  scene_configuration.cpp  system_t.cpp  system_type.cpp
src/ode/thread/: CMakeLists.txt  notification_queue.cpp  thread_pool.cpp  thread_pool.h
src/system/physics/: CMakeLists.txt
src/thread/: CMakeLists.txt  task_queue.h  thread_pool.cpp  thread_pool.h
src/util/: CMakeLists.txt
test/: CMakeLists.txt  arguments_test.cpp  array_test.cpp  main_test.cpp  schedule_test.cpp
test/anthem/: CMakeLists.txt  array_test.cpp  command_line_interface_test.cpp  logger_benchmark.cpp  logger_test.cpp  logging_test.cpp  main.cpp
test/anthem/systems/: CMakeLists.txt
test/gsl/: CMakeLists.txt  util_test.cpp  view_test.cpp
test/ode/: CMakeLists.txt  command_line_interface_test.cpp  initialize_test.cpp  logger_benchmark.cpp  logger_test.cpp  logging_benchmark.cpp  logging_set_up.cpp  logging_set_up.h  logging_test.cpp  main.cpp  string_utility_benchmark.cpp  string_utility_test.cpp
test/std/: CMakeLists.txt  array_test.cpp  type_traits_test.cpp  utility_test.cpp
test/thread/: CMakeLists.txt  task_queue_test.cpp  thread_pool_test.cpp
test/util/: CMakeLists.txt
(+467 files in other folders)
