# Copyright (c) 2017–2020 Antti Kivi
# Licensed under the Effective Elegy Licence

add_subdirectory(anthem)
add_subdirectory(gsl)
add_subdirectory(ode)

set(ODE_TEST_SOURCES ${ODE_TEST_SOURCES} PARENT_SCOPE)
set(ODE_BENCHMARK_SOURCES ${ODE_BENCHMARK_SOURCES} PARENT_SCOPE)
set(ODE_TEST_INCLUDES ${ODE_TEST_INCLUDES} PARENT_SCOPE)
set(ANTHEM_TEST_SOURCES ${ANTHEM_TEST_SOURCES} PARENT_SCOPE)
set(ANTHEM_BENCHMARK_SOURCES ${ANTHEM_TEST_SOURCES} PARENT_SCOPE)
