# Copyright (c) 2020 Antti Kivi
# Licensed under the Effective Elegy Licence

add_subdirectory(systems)

list(APPEND ANTHEM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/application.cpp)
list(APPEND ANTHEM_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/command_line_interface.cpp)
list(APPEND ANTHEM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
list(APPEND ANTHEM_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/run.cpp)

list(APPEND ANTHEM_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/application.h)
list(APPEND ANTHEM_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/command_line_interface.h)
list(APPEND ANTHEM_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/config.h)
list(APPEND ANTHEM_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/logging_config.h)
list(APPEND ANTHEM_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/run.h)

set(ANTHEM_SOURCES ${ANTHEM_SOURCES} PARENT_SCOPE)
set(ANTHEM_INCLUDES ${ANTHEM_INCLUDES} PARENT_SCOPE)
